--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           Aula 01: Ferramentas básicas e se familiarizando com a ferramenta
         </p>
         <iframe
-          width="560"
+          width="100%"
           height="315"
           src="https://www.youtube.com/embed/_o2u3Hky6AY"
           title="YouTube video player"
@@ -45,7 +45,7 @@
           parte 2
         </p>
         <iframe
-          width="560"
+          width="100%"
           height="315"
           src="https://www.youtube.com/embed/9GiQ9jWjUd4"
           title="YouTube video player"
