--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </p>
         <iframe
           width="100%"
-          height="315"
+          height="100%"
           src="https://www.youtube.com/embed/_o2u3Hky6AY"
           title="YouTube video player"
           frameborder="0"
@@ -46,7 +46,7 @@
         </p>
         <iframe
           width="100%"
-          height="315"
+          height="100%"
           src="https://www.youtube.com/embed/9GiQ9jWjUd4"
           title="YouTube video player"
           frameborder="0"
