--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="icon.png" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Open+Sans:wght@700&display=swap"
@@ -31,7 +30,7 @@
         </p>
         <iframe
           width="100%"
-          height="100%"
+          height="315"
           src="https://www.youtube.com/embed/_o2u3Hky6AY"
           title="YouTube video player"
           frameborder="0"
@@ -46,7 +45,7 @@
         </p>
         <iframe
           width="100%"
-          height="100%"
+          height="315"
           src="https://www.youtube.com/embed/9GiQ9jWjUd4"
           title="YouTube video player"
           frameborder="0"
