--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <p>Índice:</p>
         <a href="#aula01">Aula 01</a>
         <a href="#aula02">Aula 02</a>
+        <a href="#aula03">Aula 03</a>
+        <a href="#aula04">Aula 04</a>
       </div>
 
       <div class="box-video">
@@ -47,6 +49,33 @@
           width="100%"
           height="315"
           src="https://www.youtube.com/embed/9GiQ9jWjUd4"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="box-video">
+        <p class="fonte" id="aula03">Aula 03: Fazendo o post da Fórmula-E</p>
+        <iframe
+          width="100%"
+          height="315"
+          src="https://www.youtube.com/embed/d6ioYM6pkKA"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+        <p id="direitos">
+          Obs: Links mencionados no vídeo estarão na legenda do vídeo no Youtube
+        </p>
+      </div>
+      <div class="box-video">
+        <p class="fonte" id="aula04">Aula 04: Posts com continuidade</p>
+        <iframe
+          width="100%"
+          height="315"
+          src="https://www.youtube.com/embed/tl68zfaZQB8"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
